KULRICE-4817: simplifying Configurers in preparation to split them from the Rice Configurer